--- a/style.css
+++ b/style.css
@@ -5,4 +5,19 @@
   width: 500px;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(16, 1fr);
+  border: solid 2px black;
+  margin-top: 10px;
+  margin-left: 370px;
+}
+
+body {
+    background-color: honeydew;
+}
+
+h1 {
+    text-align: center;
+}
+
+#controladores {
+    text-align: center;
 }
